docs: 오탈자 수정

--- a/html/03. HTML-하이퍼텍스트와 속성.md
+++ b/html/03. HTML-하이퍼텍스트와 속성.md
@@ -2,12 +2,9 @@
 <br>
 
 ## HTML 속성
-HTML 속성은 **태그에 추가적인 정보를 제공하여 요소의 동작이나 동작 방식을 정의**하는 데 사용된다.  
-속성은 항상 **시작 태그 내부**에 작성되며, "속성명=값" 형식을 따른다.  
-예를 들어, `<a>` 태그의 `href` 속성은 하이퍼링크의 목적지 URL을 정의한다..
+HTML 속성은 **태그에 추가적인 정보를 제공하여 요소의 동작이나 동작 방식을 정의**하는 데 사용되며, 속성은 항상 **시작 태그 내부**에 "속성명=값" 형식으로 작성된다. 추가적으로 `<a>` 태그의 `href` 속성은 하이퍼링크의 목적지 URL을 정의한다.
 
-우선 이전 시간에 학습한 태그를 사용해서 다음 html 문서에 링크를 추가해보자.
-
+이전 시간에 학습한 태그를 사용해서 다음 html 문서에 링크를 추가해보자.
 ```
 <h1>오늘의 명언</h1>
 <h2>우리 모두는 <strong>자신의 힘</strong>으로 발견한 내용을 가장 쉽게 익힌다. (<a>도널드 커누스</a>)</h2>
