--- a/html/04. HTML-태그의 중첩과 목록.md
+++ b/html/04. HTML-태그의 중첩과 목록.md
@@ -2,7 +2,7 @@
 <br>
 
 브라우저에서 아래 항목들을 리스트로 표현하고 싶다면 어떻게 할 수 있을까?  
-우선 HTML 파일에 아래 항목들을 그대로 입력해서 확인해보자.
+HTML 파일에 아래 항목들을 그대로 입력해서 확인해보자.
 ```
 기술소개
 기본문법
