docs: 오탈자 수정

--- a/html/04. HTML-태그의 중첩과 목록.md
+++ b/html/04. HTML-태그의 중첩과 목록.md
@@ -3,7 +3,7 @@
 
 브라우저에서 아래 항목들을 리스트로 표현하고 싶다면 어떻게 할 수 있을까?  
 HTML 파일에 아래 항목들을 그대로 입력해서 확인해보자.
-```
+``` html
 기술소개
 기본문법
 하이퍼텍스트와 속성
@@ -32,7 +32,7 @@ HTML 파일에 아래 항목들을 그대로 입력해서 확인해보자.
 
 ### 왜 태그를 중첩해서 사용해야 할까?
 만약 아래와 같은 리스트가 2묶음 있다고 가정하자. (목차 리스트, 학생 리스트)
-```
+``` html
 - 기술소개
 - 기본문법
 - 하이퍼텍스트와 속성
