--- a/html/08. HTML - 컨테이너와 전역 속성.md
+++ b/html/08. HTML - 컨테이너와 전역 속성.md
@@ -10,7 +10,7 @@
 - span 태그: 인라인 컨테이너
 
 ### 예시
-```
+``` html
 <!DOCTYPE html>
 <html>
   <head>
@@ -48,7 +48,7 @@
   - 사용자에게 툴팁 제공
 
 ### 예시
-```
+``` html
 <div id="study">
   <h2 class="title"><span>공부</span> 다짐하기</h2>
 </div>
