--- a/css/07. CSS - position.md
+++ b/css/07. CSS - position.md
@@ -15,7 +15,7 @@
 - 오프셋이란 위치를 얼마간 이동시키는 것을 의미
 - 요소가 이동해도 다른 요소에 영향을 주지 않음
 #### 예시
-```css
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -41,7 +41,7 @@
 > **요소를 문서 흐름에서 제거**하고, 상위 요소 중 가장 가까운 position 지정 요소에 대해 상대적으로 오프셋을 적용
 - position 지정 요소란, position 속성에 속성값이 정의된 요소
 #### 예시
-```css
+``` html
 <!DOCTYPE html>
 <html>
 <head>
@@ -77,7 +77,7 @@
 > 일반적인 문서 흐름에서 제거하고 지정한 위치에 고정
 - 스크롤을 할 때도 지정한 위치에 고정된다.
 #### 예시
-```css
+``` html
 <!DOCTYPE html>
 <html>
 <head>
@@ -120,7 +120,7 @@
 > 요소를 일반적인 문서 흐름에 따라 배치하고 스크롤되는 가장 가까운 상위 요소에 대해 오프셋을 적용
 - 스크롤 이동으로 요소가 움직여도 스티키 요소는 고정된 상태를 유지
 #### 예시
-```css
+``` html
 <!DOCTYPE html>
 <html>
 <head>
