--- a/css/02. CSS - 선택자.md
+++ b/css/02. CSS - 선택자.md
@@ -63,6 +63,60 @@ h1, p, div {
 ```
 <br>
 
+### 특성 선택자(속성 선택자)
+- 주어진 속성의 존재 여부나 그 값에 따라 요소를 선택할 때 사용
+``` css
+[class]{ background-color: red; }			/* 클래스 속성을 가진 요소 선택 */
+[class="item"]{	background-color: red; }	/* 클래스 값이 item인 요소 선택 */
+[class*="it"]{	background-color: red; }	/* 클래스 값에 it가 포함되는 요소를 선택 */
+[class^="it"]{	background-color: red; }	/* 클래스 값이 it로 시작하는 요소를 선택 */
+[class$="it"]{	background-color: red; }	/* 클래스 값이 it로 끝나는 요소를 선택 */
+```
+<br>
+
+### 결합 선택자
+- 두 개 이상의 선택자를 결합시켜 결합된 조건을 만족하는 요소를 선택할 때 사용
+- 자손 결합자와 형제 결합자로 구분할 수 있다.
+``` css
+/* 자손 결합자: 두 개의 선택자 중 첫 번째 선택자 요소의 자손을 선택할 수 있다. */
+div p { color: white; }		/* div 요소 안에 위치하는 모든 p 요소를 선택 */
+div > p { color: white; }	/* div 요소의 바로 아래에 위치하는 모든 p 요소를 선택 */
+
+/* 형제 결합자: 두 개의 선택자 중 첫 번째 선택자 요소의 형제를 선택할 수 있다.  */
+h1 ~ p{ color: red; }		/* h1 요소의 뒤에 오는 형제 중 모든 p 요소를 선택 */
+h1 + p{ color: red; }		/* h1 요소의 바로 뒤에 오는 형제 p 요소를 선택 */
+```
+<br>
+
+### 의사 클래스(가상 클래스)
+- 선택자에 추가하는 키워드로 요소가 어떤 특정한 상태가 되었을 때 요소를 선택할 때 사용
+- 대표적인 의사클래스
+	- hover: 마우스 포인터가 요소에 올라가 있다.
+	- active: 사용자가 요소를 활성화했다. (ex. 클릭)
+	- focus: 요소가 포커스를 받고 있다.
+	- disabled: 비활성화 상태의 요소이다.
+	- nth-child(): 형제 사이에서의 순서에 따라 요소를 선택한다.
+``` css
+h1:hover { color: red; } 	/* h1 요소에 마우스 커서가 올라오면 글자를 빨간색으로 하겠다! */
+```
+<br>
+
+### 의사 요소
+- 선택자에 추가하는 키워드로 선택한 요소의 특정 부분에 대한 스타일을 정의할 때 사용
+- 대표적인 의사요소
+	- after: 요소의 앞에 의사 요소를 생성 및 추가한다.
+	- before: 요소의 뒤에 의사 요소를 생성 및 추가한다.
+	- first-line: 블록 레벨 요소의 첫 번째 선에 스타일을 적용한다.
+	- marker: 목록 기호의 스타일을 적용한다.
+	- placeholder: 입력 요소의 플레이스홀더 스타일을 적용한다.
+```css
+li::first-letter{ font-size: 20px; }	/* li 요소의 첫 번째 글자만 크기를 20px로 하겠다 */
+p::before{ content: "앞에추가"; color: red; }	/* p 태그 요소의 앞에 요소를 생성. */	
+```
+<br>
+
+
+
 ### 선택자가 겹치는 경우
 - 선택자가 겹치는 경우 기본적으로 나중에 작성된 스타일이 적용
 - 선택자가 다르지만 요소가 겹치는 경우 선택자 우선순위에 의해 적용될 스타일이 결정된다.
